--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@blick/ui",
   "version": "0.1.0",
-  "description": "Bibliothèque de composants React pour la marque Blick",
+  "description": "Bibliothèque de composants React réutilisables pour la marque Blick",
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
@@ -12,23 +12,34 @@
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     },
-    "./styles.css": "./dist/style.css"
+    "./style.css": "./dist/style.css"
   },
   "files": [
-    "dist"
+    "dist",
+    "README.md",
+    "USAGE.md",
+    "CHANGELOG.md"
   ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "storybook": "./node_modules/.bin/storybook dev -p 6006",
+    "build-storybook": "./node_modules/.bin/storybook build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/blick/ui.git"
   },
   "keywords": [
     "react",
     "components",
     "ui",
-    "blick"
+    "blick",
+    "design-system",
+    "typescript",
+    "css-variables",
+    "dark-mode"
   ],
   "author": "Blick",
   "license": "MIT",
