--- a/package.json
+++ b/package.json
@@ -1,67 +1,17 @@
 {
   "name": "@blick/ui",
   "version": "0.1.0",
-  "description": "Bibliothèque de composants React réutilisables pour la marque Blick",
-  "type": "module",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
-    },
-    "./style.css": "./dist/style.css"
-  },
+  "description": "Composants React simples pour Blick",
+  "main": "index.js",
   "files": [
-    "dist",
-    "README.md",
-    "USAGE.md",
-    "CHANGELOG.md"
-  ],
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "storybook": "./node_modules/.bin/storybook dev -p 6006",
-    "build-storybook": "./node_modules/.bin/storybook build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/blick/ui.git"
-  },
-  "keywords": [
-    "react",
     "components",
-    "ui",
-    "blick",
-    "design-system",
-    "typescript",
-    "css-variables",
-    "dark-mode"
+    "styles.css",
+    "index.js"
   ],
-  "author": "Blick",
-  "license": "MIT",
   "peerDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^18.0.0"
   },
-  "devDependencies": {
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-links": "^8.6.14",
-    "@storybook/blocks": "^8.6.14",
-    "@storybook/react": "^8.6.14",
-    "@storybook/react-vite": "^8.6.14",
-    "@tailwindcss/vite": "^4.0.0",
-    "@types/node": "^24.10.0",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "storybook": "^8.6.14",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.3",
-    "vite-plugin-dts": "^4.2.1"
-  }
+  "keywords": ["react", "blick", "components"],
+  "author": "Blick",
+  "license": "MIT"
 }
