Update Button component: simplify variants (normal/outline), add fixed height, border-radius, and antialiasing

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "author": "Blick",
   "license": "MIT",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "./node_modules/.bin/vite",
+    "build": "./node_modules/.bin/vite build",
+    "preview": "./node_modules/.bin/vite preview"
   },
   "repository": {
     "type": "git",
